# political-alert-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: monitor.yml
config/: sources.yaml  ticker_keywords.yaml
data/: seen_alerts.json  trade_history.json
src/political_alert_bot/: __init__.py  __main__.py  backfill_trades.py  config.py  disclosures.py  feeds.py  matcher.py  state.py  telegram.py  telegram_test.py  trades.py
tests/: test_backfill_trades.py  test_disclosures.py  test_matcher.py  test_telegram_test.py  test_trades.py
